--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,17 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "pwa-chrome",
+  "configurations": [{
+    "type": "chrome",
+    "request": "launch",
+    "name": "Launch Chrome against localhost",
+    "url": "http://127.0.0.1:5500/",
+    "webRoot": "${workspaceFolder}"
+  },
+  {
+      "name": "Launch index.html",
+      "type": "chrome",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:5500",
-      "webRoot": "${workspaceFolder}"
-    }
-  ]
+      "file": "${workspaceFolder}/index.html"
+  },]
 }
