--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,13 @@
     "webRoot": "${workspaceFolder}"
   },
   {
+    "type": "chrome",
+    "request": "attach",
+    "name":"Attach to chrome",
+    "port": 5500,
+    "webRoot": "${workspaceFolder}"
+  },
+  {
       "name": "Launch index.html",
       "type": "chrome",
       "request": "launch",
