--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "debug.javascript.usePreview": false
+  "liveServer.settings.ChromeDebuggingAttachment": true,
+  "liveServer.settings.CustomBrowser": "chrome",
+  "liveServer.settings.host": "localhost",
+  "liveServer.settings.NoBrowser": true
 }
