--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,18 +3,12 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
+  "configurations": [
+    {
     "type": "chrome",
     "request": "launch",
     "name": "Launch Chrome against localhost",
-    "url": "http://127.0.0.1:5500/",
-    "webRoot": "${workspaceFolder}"
-  },
-  {
-    "type": "chrome",
-    "request": "attach",
-    "name":"Attach to chrome",
-    "port": 5500,
+    "url": "http://localhost:5500/",
     "webRoot": "${workspaceFolder}"
   },
   {
