--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "liveServer.settings.ChromeDebuggingAttachment": true,
-  "liveServer.settings.CustomBrowser": "chrome",
-  "liveServer.settings.host": "localhost",
-  "liveServer.settings.NoBrowser": true
+  "liveServer.settings.port": 5500,
+  "liveServer.settings.CustomBrowser" : "chrome",
+  "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome --incognito --remote-debugging-port=9222",
+  "liveServer.settings.NoBrowser" : false,
 }
